deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rock-paper-scissors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rock-paper-scissors
  template:
    metadata:
      labels:
        app: rock-paper-scissors
    spec:
      containers:
        - name: rock-paper-scissors
          image: <your-docker-username>/rock-paper-scissors:latest
          ports:
            - containerPort: 8080
