service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rock-paper-scissors
spec:
  selector:
    app: rock-paper-scissors
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
